🤡 Case note request handler test

--- a/server/views/court-case-comments.njk
+++ b/server/views/court-case-comments.njk
@@ -51,7 +51,7 @@
                             <td class="govuk-table__cell">
                                 <div class="govuk-grid-row">
                                     <div class="govuk-grid-column-full govuk-!-padding-bottom-3 case-comments-comment-display">{{ comment.comment }}</div>
-                                </div
+                                </div>
                                 <div class="govuk-grid-row">
                                     <div class="govuk-grid-column-one-half govuk-!-padding-bottom-2">
                                         <span class="govuk-caption-m govuk-!-font-size-16">
