--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -37,7 +37,7 @@
                     </button>
                 {% endif %}
             </form>
-            <form id="save-notes" action="summary/comments" method="post"></form>
+            <form id="save-notes" action="summary/notes" method="post"></form>
         {% endif %}
     </div>
 </div>
