--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -18,7 +18,7 @@
                             </div>
                         </header>
 
-                        {%- from "components/hearing-notes/macro.njk" import pacCaseNotes -%}
+                        {%- from "components/hearing-notes/macro.njk" import pacHearingNotes -%}
                         {{ pacHearingNotes({
                             data: data,
                             hearing: hearing
