--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -2,7 +2,7 @@
 
     <div class="govuk-grid-row govuk-grid-column-full app-summary-card__body">
         {% for previousNote in params.hearing.notes %}
-            <span class="govuk-!-margin-bottom-2 app-summary-card__body">{{ previousNote.note }}</span>
+            <span class="govuk-!-margin-bottom-2">{{ previousNote.note }}</span>
             <span class="govuk-caption-m govuk-!-margin-top-2 govuk-!-font-size-16">{{ previousNote.author }} on {{ previousNote.noteCreated | caseCommentTimeFormat }}
                             <a class="govuk-link govuk-!-margin-left-5" href="#">Delete</a>
                         </span>
