Implementations after code review

--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -21,7 +21,7 @@
                 <textarea class="govuk-textarea" id="note-box-{{ params.hearing.hearingId }}"  name="noteBox" rows="5" aria-describedby="note-box"></textarea>
                 <button class="govuk-button" type="submit" data-module="govuk-button">Save</button>
                 <input type="hidden" name="hearingId" value="{{ params.hearing.hearingId }}"/>
-            </div>
+            </div class="govuk-details__text">
         </details>
     </form>
 </div>
