📈 PIC-2385: Add google tag manager snippets

--- a/server/views/partials/layout.njk
+++ b/server/views/partials/layout.njk
@@ -5,6 +5,13 @@
 <!DOCTYPE html>
 <html lang="en" class="govuk-template no-js">
 <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+          new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-T24QVZ6');</script>
+    <!-- End Google Tag Manager -->
 
     {% set mainTitle = "Prepare a case for sentence" %}
 
@@ -42,6 +49,10 @@
     {% endblock %}
 </head>
 <body class="govuk-template__body">
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T24QVZ6"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 <script>
   document.body.classList.add('js-enabled')
