--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -1,6 +1,6 @@
 <div class="app-summary-card__body">
 
-    <div class="govuk-grid-row govuk-grid-column-full app-summary-card__body">
+    <div class="govuk-grid-row govuk-grid-column-full">
         {% for previousNote in params.hearing.notes %}
             <span class="govuk-!-margin-bottom-2">{{ previousNote.note }}</span>
             <span class="govuk-caption-m govuk-!-margin-top-2 govuk-!-font-size-16">{{ previousNote.author }} on {{ previousNote.created | caseCommentTimeFormat }}
@@ -13,10 +13,10 @@
     <form id="save-notes-{{ params.hearing.hearingId }}" action="summary/notes" method="post">
 
         <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
-            <summary class="govuk-details__summary">
+            <summary class="govuk-details__summary govuk-!-margin-bottom-0">
                 <span class="govuk-details__summary-text">Add a note</span>
             </summary>
-            <div class="govuk-details__text">
+            <div class="govuk-details__text govuk-!-padding-bottom-0">
                 <label class="govuk-label" for="note-box-{{ params.hearing.hearingId }}" type="hidden">Add note</label>
                 <textarea class="govuk-textarea" id="note-box-{{ params.hearing.hearingId }}" name="note" rows="5" aria-describedby="note-box"></textarea>
                 <button class="govuk-button" type="submit" data-module="govuk-button">Save</button>
