--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -2,11 +2,13 @@
 
     <div class="govuk-grid-row govuk-grid-column-full">
         {% for previousNote in params.hearing.notes %}
-            <span class="govuk-!-margin-bottom-2">{{ previousNote.note }}</span>
-            <span class="govuk-caption-m govuk-!-margin-top-2 govuk-!-font-size-16">{{ previousNote.author }} on {{ previousNote.created | caseCommentTimeFormat }}
-                            <a class="govuk-link govuk-!-margin-left-5" href="#">Delete</a>
-                        </span>
-            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+            <div id="previous-note-{{ previousNote.noteId }}">
+                <span class="govuk-!-margin-bottom-2">{{ previousNote.note }}</span>
+                <span class="govuk-caption-m govuk-!-margin-top-2 govuk-!-font-size-16">{{ previousNote.author }} on {{ previousNote.created | caseCommentTimeFormat }}
+                    <a class="govuk-link govuk-!-margin-left-5" href="summary/notes/delete?targetHearingId={{ params.hearing.hearingId }}&noteId={{ previousNote.noteId }}">Delete</a>
+                </span>
+                <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+            </div>
         {% endfor %}
     </div>
 
