PIC-2397 fix multi line comment issue

--- a/server/views/confirm-delete-hearing-note.njk
+++ b/server/views/confirm-delete-hearing-note.njk
@@ -25,7 +25,7 @@
             <div class="govuk-grid-column-two-thirds">
                 <div class="confirm-delete-box">
                     <span class="govuk-caption-m govuk-!-padding-bottom-5">
-                        Added on the {{ created | caseCommentTimeFormat }}
+                        Added on the {{ created | hearingNoteTimeFormat }}
                     </span>
                     <span class="govuk-body">{{ note }}
                 </div>
