PIC-2488 - add scrolling to delete confirmation display box

--- a/public/stylesheets/app/_case-comments-custom.scss
+++ b/public/stylesheets/app/_case-comments-custom.scss
@@ -3,6 +3,11 @@
   margin-top: 0;
 }
 
+.scrollable-span {
+  display: block;
+  overflow: auto;
+}
+
 .case-comments-save-button {
   margin-bottom: 0;
 }
