--- a/server/views/confirm-delete-comment.njk
+++ b/server/views/confirm-delete-comment.njk
@@ -22,11 +22,11 @@
 
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
-                <div class="confirm-delete-box">
+                <div class="confirm-delete-box scrollable-span">
                     <span class="govuk-caption-m govuk-!-padding-bottom-5">
                         Added on the {{ created | caseCommentTimeFormat}}
                     </span>
-                    <span class="govuk-body">{{ comment }}
+                    <span class="govuk-body case-comments-comment-display">{{ comment }}
                 </div>
             </div>
         </div>
