--- a/server/views/confirm-delete-hearing-note.njk
+++ b/server/views/confirm-delete-hearing-note.njk
@@ -23,11 +23,11 @@
 
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
-                <div class="confirm-delete-box">
+                <div class="confirm-delete-box scrollable-span">
                     <span class="govuk-caption-m govuk-!-padding-bottom-5">
                         Added on the {{ created | hearingNoteTimeFormat }}
                     </span>
-                    <span class="govuk-body">{{ note }}
+                    <span class="govuk-body case-comments-comment-display">{{ note }}</span>
                 </div>
             </div>
         </div>
