PIC-2484 fix ordering of hearing notes

--- a/server/views/court-case-progress.njk
+++ b/server/views/court-case-progress.njk
@@ -38,7 +38,8 @@
                         {%- from "components/hearing-notes/macro.njk" import pacHearingNotes -%}
                         {{ pacHearingNotes({
                             data: data,
-                            hearing: hearing
+                            hearing: hearing,
+                            currentUserUuid: currentUserUuid
                         }) }}
                     </div>
                 {% endfor %}
