PIC-2485 user should not be able to delete other users' notes

--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -5,7 +5,9 @@
             <div id="previous-note-{{ previousNote.noteId }}">
                 <span class="govuk-!-margin-bottom-2 case-comments-comment-display">{{ previousNote.note }}</span>
                 <span class="govuk-caption-m govuk-!-margin-top-2 govuk-!-font-size-16">{{ previousNote.author }} on {{ previousNote.created | hearingNoteTimeFormat }}
-                    <a class="govuk-link govuk-!-margin-left-5" href="summary/notes/delete?targetHearingId={{ params.hearing.hearingId }}&noteId={{ previousNote.noteId }}">Delete</a>
+                    {% if previousNote.createdByUuid === params.currentUserUuid %}
+                        <a class="govuk-link govuk-!-margin-left-5" href="summary/notes/delete?targetHearingId={{ params.hearing.hearingId }}&noteId={{ previousNote.noteId }}">Delete</a>
+                    {% endif %}
                 </span>
                 <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
             </div>
