--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -1,9 +1,10 @@
 <div class="app-summary-card__body">
 
     <div class="govuk-grid-row govuk-grid-column-full">
+        <table class="govuk-table" id="previous-note">
         {% for previousNote in params.hearing.notes %}
             <tr class="govuk-table__row">
-                <td class="govuk-table__cell">
+                <td class="govuk-table__cell" id="previous-note-{{ previousNote.noteId }}">
                     <div class="govuk-grid-row">
                         <span class="govuk-grid-column-full case-comments-comment-display">{{ previousNote.note }}</span>
                     </div>
@@ -19,6 +20,7 @@
                 </td>
             </tr>
         {% endfor %}
+        </table>
     </div>
 
     <form id="save-notes-{{ params.hearing.hearingId }}" action="summary/notes" method="post">
