--- a/server/views/components/hearing-notes/template.njk
+++ b/server/views/components/hearing-notes/template.njk
@@ -10,7 +10,7 @@
                     </div>
                     <div class="govuk-grid-row govuk-!-margin-top-2">
                         <div class="govuk-grid-column-one-half govuk-!-padding-bottom-2">
-                            <span class="govuk-caption-m govuk-!-font-size-16">{{ previousNote.author }} on {{ previousNote.created | hearingNoteTimeFormat }}
+                            <span class="govuk-caption-m govuk-!-font-size-16">{{ previousNote.author }} on {{ previousNote.created | caseCommentTimeFormat }}
                         </div>
                         <div class="govuk-grid-column-one-quarter govuk-!-font-size-16">
                             {% if previousNote.createdByUuid === params.currentUserUuid %}
@@ -18,7 +18,6 @@
                             {% endif %}
                         </div>
                     </div>
-                    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
                 </td>
             </tr>
         {% endfor %}
